--- a/Diplom/frontend/src/assets/styles/pages/shop.scss
+++ b/Diplom/frontend/src/assets/styles/pages/shop.scss
@@ -9,8 +9,9 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 80px;
+    padding-bottom: 143px;
     .container{
-        padding-bottom: 143px;
+        
         h2{
             margin-left: 600px;
             margin-top: 16px;
@@ -30,14 +31,58 @@
             grid-template-columns: 800px 500px;
             gap: 50px;
 
-            .block_1{
+            .left{
             border-top:1px solid #A7A7A7;
             border-bottom:1px solid #A7A7A7;
+            img{
+                margin: 40px 29px 40px 29px;
             }
-            .block_2{
+            h1{
+                color: #3A3A3A;
+                font-size: 18px;
+                margin-top: 0px;
+                font-style: normal;
+                font-weight: 600;
+                width: 400px;
+                line-height: 130%; /* 23.4px */
+                letter-spacing: 0.54px;
+                padding-bottom: 71px;
+            }
+            .container{
+                display: grid;
+                grid-template-columns: repeat(3,auto);
+                h2{
+                    margin: 0px;
+                }
+                .countItem{
+                    border-radius: 12px;
+                    display: flex;
+                    border: 1px solid #000;
+                    width: 140px;
+                    height: 40px;
+                    h2{
+                        margin-left:33px;
+                        margin-top: 5px;
+                        margin-bottom: 5px;
+                        margin-right:23px;
+                    }
+                    button{
+                        background: transparent;
+                        border: none;
+                        outline: none;
+                        width: 18px;
+                        padding-left: 10px;
+                        font-size: 30px;
+                        height: 18px;
+                    }   
+                }
+            }
+            }
+            .right{
                 border-radius: 21px;
                 border: 2px solid #000;
                 text-align: start;
+                max-height:400px ;
                 h3{
                     margin-left: 25px;
                     margin-top: 25px;
