--- a/Diplom/frontend/src/assets/styles/main.scss
+++ b/Diplom/frontend/src/assets/styles/main.scss
@@ -103,9 +103,11 @@ a{
     .Notfound_content{
         justify-content: center;
         text-align: center;
-        align-items: center;
+        align-items: center;    
         img{
-            width: 1440px;
+            object-fit: cover;
+            width: 100%; 
+            max-height: 625px;
             margin-top: 28px;
         }
     }
@@ -117,18 +119,18 @@ a{
         margin-right: auto;
     }    
     .footer_container{
-            grid-template-columns: 650px auto;
+            grid-template-columns: 50% 50%;
             display: grid;
             padding-top: 48px;
             justify-content: center;
             padding-bottom: 65px;
 
-          .footer_container__item1
+          .footer_container__left
           {     
            
                 h2{
                     color:$font-color-main;
-                    font-size: 40px;
+                    font-size: calc( (100vw - 400px)/(1440 - 400) * (40 - 20) + 20px);
                     font-style: normal;
                     font-weight: 700;
                     line-height: 130%; 
@@ -136,19 +138,19 @@ a{
                 h1{
                     padding-top: 25px;
                     color:$font-color-main;
-                    font-size: 60px;
+                    font-size: calc( (100vw - 400px)/(1440 - 400) * (60 - 30) + 30px);
                     font-style: normal;
                     font-weight: 600;
                     line-height: 130%;
                 }
             
          }
-        .footer_container__item2
+        .footer_container__right
          {  
             padding-left: 182px;
                 h2{
                 color:$font-color-main;
-                font-size: 40px;
+                font-size:calc( (100vw - 400px)/(1440 - 400) * (40 - 20) + 20px);
                 font-style: normal;
                 font-weight: 700;
                 line-height: 130%; 
@@ -156,7 +158,7 @@ a{
                 a{
                 padding-top: 25px;
                 color: $font-color-main;
-                font-size: 40px;
+                font-size: calc( (100vw - 400px)/(1440 - 400) * (40 - 20) + 20px);
                 font-style: normal;
                 font-weight: 600;
                 line-height: 130%; /* 52px */
@@ -181,10 +183,18 @@ a{
      }
      .map{
         margin-top: 47px;
-            iframe{
-                width: calc(400px + (1345 - 400) * ( (80vw - 380px) / ( 1440 - 380) ));
-                height: calc(400px + (525 - 400) * ( (80vw - 380px) / ( 1440 - 380) ));
-            }
+        margin-right: auto;
+        margin-left: auto;
+        text-align: center;
+        padding-left: 40px;
+        padding-right: 40px;
+        iframe{
+    
+            border:none;
+                width: calc(300px + (1345 - 300) * ( (92vw - 380px) / ( 1345 - 380) ));
+                max-width: 1345px;
+                height: calc(300px + (525 - 300) * ( (80vw - 380px) / ( 1440 - 380) ));  
+        }
      }
      .footer_container_iconBlock{
         padding-top: 30px;
@@ -193,14 +203,14 @@ a{
         display: flex;
     }
 
-    @media(max-width:768px) {
+    @media(max-width:760px) {
 
         .Notfound_content{
             justify-content: center;
             text-align: center;
             align-items: center;
             img{
-                width: 400px;
+                width: 100%;
                 margin-top: 28px;
                 height: auto;
             }
@@ -215,7 +225,7 @@ a{
 
                 padding-bottom: 65px;
                 text-align: center;
-              .footer_container__item1
+              .footer_container__left
               {     
                
                     h2{
@@ -235,7 +245,7 @@ a{
                     }
                 
              }
-            .footer_container__item2
+            .footer_container__right
              {  
                 padding-left: 0px;
                     h2{
