--- a/Diplom/frontend/src/assets/styles/pages/catalog.scss
+++ b/Diplom/frontend/src/assets/styles/pages/catalog.scss
@@ -19,41 +19,59 @@
         letter-spacing: 0.54px;
         text-align: center;
         margin-top: 20px;
-       
     }
     img{
         border-radius: 20px; 
     }
 }
-.container{
-    margin-left: 33px;
-    max-width: 1380px;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-   h1{
-   margin-top: 80px;
-   color: #000;
-    font-family: Montserrat;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 130%; /* 52px */
-    letter-spacing: 1.2px;
-    padding-bottom: 20px;
-   }
-    .category{
-        grid-template-columns: repeat(4, 318px);
-        grid-column-gap: 20px;
-        grid-row-gap: 58px;
-        display: grid;
-        
-      
+
+@media (max-width:1400px) {
+    .container{
+        .category{
+            grid-template-columns: repeat(3, 300px);
+            grid-column-gap: 32px;
+            grid-row-gap: 58px;
+            display: grid;
+            text-align: center;
+            justify-content: center;
+            .overlay{
+              width: 320px;
+                
+                button{
+                 margin-left: auto;
+                 margin-right: auto;
+                }
+             }
+        }
     }
+    
+}
+@media (max-width:1040px) {
+    .container{
+        .category{
+            grid-template-columns: repeat(2, 300px);
+            grid-column-gap: 32px;
+            grid-row-gap: 58px;
+            display: grid;
+            text-align: center;
+            justify-content: center;
+            
+            .overlay{
+                opacity: 1;
+                background: transparent;
+                margin-left: 20px;
+                width: 300px;
+                button{
+                justify-content: start;
+                }
+             }
+        }
+    }
+    
+   
 }
 
-@media (max-width: 760px) {
+@media (max-width: 680px) {
     .item{
         padding-bottom: 50px;   
         h2{
@@ -72,8 +90,6 @@
         margin-left: 33px;
         align-items: center;
         justify-content: center;
-        margin-left: auto;
-        margin-right: auto;
        h1{
        margin-top: 80px;
        color: #000;
@@ -92,6 +108,21 @@
             display: grid;
             text-align: center;
             justify-content: center;
+            .item_Info{
+                .overlay{
+                    opacity: 1;
+                    background: transparent;
+                    margin-left: 50px;
+                    width: 300px;
+                   button{
+                    margin-left: auto;
+                    margin-right: auto;
+                   }
+                }
+                img{
+                    margin-left: 40px;
+                 }
+            }
         }
     }
 }
