--- a/Diplom/frontend/src/assets/styles/pages/product.scss
+++ b/Diplom/frontend/src/assets/styles/pages/product.scss
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     font-family: 'Montserrat';
 }
+
 .item_Info{
     position: relative;
     img{
@@ -40,14 +41,10 @@
         }
       }
 }
-
-  
   .item_Info:hover .overlay {
     opacity: 1;
   }
 .item{
-    /* padding-bottom: 50px;   */
-   
     h2{
         color: #000;
         font-size: 18px;
@@ -180,15 +177,29 @@
       
     }
 }
-
-@media (max-width: 760px) {
-
+@media  (max-width:990px) {
+    .filter {
+        display: block;
+        text-align: center;
+        padding-bottom: 30px;  
+        padding-top: 0px; 
+    }
+}
+@media (max-width:576px) {
+    
+    .item_Info{
+        margin-left: auto;
+        margin-right: auto;
+        img{
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
     .overlay {
-        bottom:50px; 
-        height: 400px;
-        border-radius: 12px;
+        opacity:1;
         button{
-            margin-left: -80px;
+            display: block;
+            margin-top: 0px;
         }
     }
 
@@ -197,6 +208,52 @@
         text-align: center;
         padding-bottom: 30px;  
         padding-top: 0px; 
+        h4{
+            color: #000;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 130%; /* 26px */
+            letter-spacing: 0.6px;
+            padding-right: 20px;
+            margin-top: 10px;
+        }
+        input{
+            border-radius: 5px;
+            border: 1px solid #C3C3C3;
+            padding: 12px;
+            background: #F0F0F0;
+            outline: none;
+            margin-right: 20px;
+        }
+        .box{
+            height: 45px;
+            border: 1px solid #C3C3C3;
+            background: #F0F0F0;
+            width: 45px;
+        }
+        select{
+            border-radius: 5px;
+            border: 1px solid #C3C3C3;
+            background: #F0F0F0;
+            color: #5A5A5A;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 130%; /* 20.8px */
+            letter-spacing: 0.48px;
+            outline: none;
+            option{
+                color: #000;
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 600;
+                line-height: 130%; /* 23.4px */
+                letter-spacing: 0.54px;
+                background: #fff;
+            }
+        }
+        
     }
     .item{
         padding-bottom: 50px;   
