add delete Item in shop

--- a/Diplom/frontend/src/assets/styles/pages/product.scss
+++ b/Diplom/frontend/src/assets/styles/pages/product.scss
@@ -187,14 +187,13 @@
 }
 @media (max-width:576px) {
     
-    .item_Info{
-        margin-left: auto;
-        margin-right: auto;
+   /*  .item_Info{
+
         img{
             margin-left: auto;
             margin-right: auto;
         }
-    }
+    } */
     .overlay {
         opacity:1;
         button{
