--- a/Diplom/frontend/src/assets/styles/pages/Item.scss
+++ b/Diplom/frontend/src/assets/styles/pages/Item.scss
@@ -22,6 +22,8 @@
                 img{
                     border-radius: 10px;
                     box-shadow: 0px 4px 30px 0px rgba(209, 209, 209, 0.5);
+                    height: calc(400px + (638 - 400) * ( (80vw - 380px) / ( 1440 - 380) ));
+                    max-width: calc(400px + (1440 - 400) * ( (80vw - 380px) / ( 1440 - 380) ));
                 }
             }
            .Item_Info{
@@ -92,7 +94,29 @@
         }
     }
 }
+@media (max-width:1400px){
+    .product .Item .container{
+        display: block;
+        text-align: center;
+        .Item__Image{
+            text-align: center;
 
+        }
+        .Item_Info{
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 600px;
+            button{
 
+            }
+            
+        }
+    }
+}
+@media (max-width:560px){
+    .product .Item .container{
+        display: block;
+    }
+}
 
     
