--- a/Diplom/frontend/src/assets/styles/pages/shop.scss
+++ b/Diplom/frontend/src/assets/styles/pages/shop.scss
@@ -43,7 +43,7 @@
                 margin-top: 0px;
                 font-style: normal;
                 font-weight: 600;
-                width: 400px;
+                max-width: 318px;
                 line-height: 130%; /* 23.4px */
                 letter-spacing: 0.54px;
                 padding-bottom: 71px;
@@ -163,4 +163,27 @@
        
     }
 
+}
+.mainCost{
+    color: #000;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 130%; /* 52px */
+    letter-spacing: 1.2px;
+    margin-right: 70px;
+}
+.discount{
+    color: #8B8B8B;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 130%; /* 26px */
+    letter-spacing: 0.6px;
+    text-decoration-line: strikethrough;
+}
+.close{
+    margin-top: -39px;
+    margin-left: 200px;
+    position: absolute;
 }
