--- a/Diplom/frontend/src/assets/styles/pages/Item.scss
+++ b/Diplom/frontend/src/assets/styles/pages/Item.scss
@@ -106,9 +106,7 @@
             margin-left: auto;
             margin-right: auto;
             max-width: 600px;
-            button{
-
-            }
+          
             
         }
     }
@@ -116,6 +114,15 @@
 @media (max-width:560px){
     .product .Item .container{
         display: block;
+    }
+    .product .Item .container .Item_Info h2 .mainCost {
+        padding-right: 0px;
+        color: #000;
+        font-size: 70px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 130%;
+        letter-spacing: 0.6px;
     }
 }
 
