--- a/Diplom/frontend/src/assets/styles/pages/shop.scss
+++ b/Diplom/frontend/src/assets/styles/pages/shop.scss
@@ -4,6 +4,14 @@
     box-sizing: border-box;
     font-family: 'Montserrat';
 }
+.InputEror{
+    color:rgb(255, 153, 0);
+    position: absolute;
+    margin-top: 20px;
+    font-size: 14px;
+    display: none;
+    margin-left: 25px;
+}
 .main{
     max-width: 1440px;
     margin-left: auto;
